[project]
name = "L2"
license = "MIT"

[tool.black]
line-length = 190
target_version = ['py310']
skip-string-normalization = true

[tool.poetry]
name = "l2"
version = "2022.11.81406+cf869f"
description = ""
authors = ["Mikhail Privalov <n5250@ya.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
django = "4.1"
appdirs = "1.4.4"
attrs = "22.1.0"
black = "22.10.0"
bleach = "5.0.1"
autopep8 = "1.7.0"
cached-property = "1.5.2"
celery = "5.2.7"
certifi = "2022.9.24"
chardet = "5.0.0"
DAWG-Python = "0.7.2"
defusedxml = "0.7.1"
Django = "4.1"
django-ajax-selects = "2.2.0"
django-celery-results = "2.4.0"
django-cors-headers = "3.13.0"
django-manifest-loader = "1.0.0"
flake8-black = "0.2.3"
gprof2dot = "2022.7.29"
gunicorn = "20.1.0"
isodate = "0.6.1"
jsonfield = "3.1.0"
jsonpickle = "2.2.0"
openpyxl = "3.0.10"
pdfrw = "0.4"
pdfminer = "20191125"
petrovna = "1.0.2"
Pillow = "9.2.0"
psycopg2 = {version="^2.9.4", optional=true}
pymorphy2 = "0.9.1"
pymorphy2-dicts = "2.4.393442.3710985"
pymorphy2-dicts-ru = "2.4.417127.4579844"
PyPDF2 = "1.28.6"
python-dateutil = "2.8.2"
pymemcache = "4.0.0"
python-magic = "0.4.27"
pytils = "0.3"
pytz = "2022.5"
pytz-deprecation-shim = "0.1.0.post0"
PyYAML = "5.4.1"
redis = "4.3.4"
reportlab = "3.6.11"
requests = "2.28.1"
requests-toolbelt = "0.10.0"
selenium = "3.141.0"
simplejson = "3.17.6"
six = "1.16.0"
sqlparse = "0.4.3"
urllib3 = "1.26.12"
xlwt = "1.3.0"
DAWG-Patched = "0.9.1"
python-docx = "^0.8.11"
zeep = "4.1.0"
djangorestframework = "3.14.0"
pdfkit = "1.0.0"
PyVirtualDisplay = "2.2"
anytree = "2.8.0"
beren = "0.7.1"
transliterate = "1.10.2"
imgkit = "1.2.2"
posthog = "2.1.2"
astm = {git = "https://github.com/moodpulse/python-astm.git", rev = "v0.6"}
psycopg2-binary = "^2.9.4"

[tool.poetry.extras]
caching = ["psycopg2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
