[project]
name = "L2"
license = "MIT"

[tool.black]
line-length = 190
target_version = ['py310']
skip-string-normalization = true

[tool.poetry]
name = "l2"
version = "2024.3.231342+7ece45"
description = ""
authors = ["Mikhail Privalov <n5250@ya.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
django = "4.1"
appdirs = "1.4.4"
attrs = "23.1.0"
black = "23.3.0"
bleach = "5.0.1"
autopep8 = "1.7.0"
cached-property = "1.5.2"
celery = "5.2.7"
certifi = "2022.9.24"
chardet = "5.1.0"
defusedxml = "0.7.1"
Django = "4.1"
django-ajax-selects = "2.2.0"
django-celery-results = "2.4.0"
django-cors-headers = "3.13.0"
django-manifest-loader = "1.0.0"
flake8-black = "0.3.6"
gprof2dot = "2022.7.29"
gunicorn = "20.1.0"
isodate = "0.6.1"
jsonfield = "3.1.0"
jsonpickle = "2.2.0"
openpyxl = "3.1.2"
pdfrw = "0.4"
pdfminer = "20191125"
petrovna = "1.0.2"
Pillow = "9.2.0"
psycopg2 = {version="^2.9.4", optional=true}
PyPDF2 = "1.28.6"
python-dateutil = "2.8.2"
pymemcache = "4.0.0"
python-magic = "0.4.27"
pytils = "0.3"
pytz = "2023.3"
pytz-deprecation-shim = "0.1.0.post0"
redis = "4.4.4"
reportlab = "4.0.7"
requests = "2.28.1"
requests-toolbelt = "0.10.0"
selenium = "3.141.0"
simplejson = "3.18.4"
six = "1.16.0"
sqlparse = "0.4.3"
urllib3 = "1.26.18"
xlwt = "1.3.0"
python-docx = "^0.8.11"
zeep = "4.1.0"
djangorestframework = "3.14.0"
pdfkit = "1.0.0"
PyVirtualDisplay = "2.2"
anytree = "2.8.0"
beren = "0.7.1"
transliterate = "1.10.2"
imgkit = "1.2.3"
astm = {git = "https://github.com/mikhailprivalov/python-astm.git", rev = "v0.6"}
psycopg2-binary = "^2.9.5"
boto3 = "^1.29.3"
prompt-toolkit = "^3.0.36"
pdf2docx = "^0.5.6"
pyotp = "^2.8.0"
qrcode = "^7.4.2"
hl7apy = "^1.3.4"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
gevent = "^23.9.1"
firebase-admin = "^6.3.0"
django-prometheus = "^2.3.1"

[tool.poetry.extras]
caching = ["psycopg2"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
